--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   logger: ^2.4.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.1.0
+  image_picker: ^1.1.2
+  image_cropper: ^7.1.0
+  firebase_storage: ^12.1.1
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
