--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_cropper: ^7.1.0
   firebase_storage: ^12.1.1
   flutter_image_compress: ^2.3.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
