--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,17 +85,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: BebasNeue
+      fonts:
+        - asset: assets/fronts/BebasNeue-Regular.ttf
+        - weight: 700
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Calistoga-Regular
+      fonts:
+        - asset: assets/fronts/Calistoga-Regular.ttf
+        - weight: 700
   #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+         
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
