--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_image_compress: ^2.3.0
   provider: ^6.1.2
   carousel_slider: ^4.2.1
+  flutter_stripe: ^11.0.0
 
 dev_dependencies:
   flutter_test:
