--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_stripe: ^11.0.0
   flutter_dotenv: ^5.1.0
   http: ^1.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
